--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -1,12 +1,20 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-    {% if form.errors %}
-        <p>seu nome de usuário ou senha estão incorretos</p>
-    {% endif %}
+{% if form.errors %}
+<p>seu nome de usuário ou senha estão incorretos</p>
+{% endif %}
 
-    <form method="POST" action="{% url 'login' %}">
-    {% csrf_token %}
+<div class="container d-flex justify-content-center align-items-center" style="height: 65vh;">
+    <div class="card p-4 text-center" style="width: 100%; max-width: 400px;">
+        <img class="mb-4 mx-auto" src="https://cdn-icons-png.flaticon.com/512/5087/5087579.png" style="width: 200px;">
+        <h1 class="h3 mb-3 font-weight-normal">
+            Por favor, faça o login
+        </h1>
+        <form method="POST" action="{% url 'login' %}">
+        </form>
+
+        {% csrf_token %}
         <table>
             <tr>
                 <td>{{ form.username.label_tag }}</td>
@@ -17,8 +25,9 @@
                 <td>{{ form.password }}</td>
             </tr>
         </table>
-
-        <input type="submit" value="login">
+        <br>
+        <input class="btn btn-success" type="submit" value="login">
         <input type="hidden" name="next" value="{{ next }}">
-    </form>
-{% endblock %}
+        </form>
+
+        {% endblock %}
