--- a/base/templates/base/post_list.html
+++ b/base/templates/base/post_list.html
@@ -1,15 +1,20 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-{% for post in posts %}
-<div class="post">
-    <div class="bg-light text-dark p-2 mb-2">
-        Publicado: {{ post.data_publicacao }}
+<div class="container mt-4">
+    {% for post in posts %}
+    <div class="card mb-4 shadow-sm">
+        <div class="card-header" style="background-color: #D8BFD8; color: white;">
+            Publicado: {{ post.data_publicacao }}
+        </div>
+        <div class="card-body">
+            <h2 class="card-title">
+                <a href="{% url 'post_detail' pk=post.pk %}" class="text-dark" style="text-decoration:
+                none; color: inherit; transition: color 0.3s;">{{ post.titulo }}</a>
+            </h2>
+            <p class="card-text">{{ post.conteudo|linebreaksbr }}</p>
+        </div>
     </div>
-    <div class="post-content">
-        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h2>
-        <p>{{ post.conteudo|linebreaksbr }}</p>
-    </div>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endblock %}
