--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -2,32 +2,32 @@
 
 {% block content %}
 {% if form.errors %}
-<p>seu nome de usuário ou senha estão incorretos</p>
+<div class="alert alert-danger" role="alert">
+    <p>Seu nome de usuário ou senha estão incorretos</p>
+</div>
 {% endif %}
 
 <div class="container d-flex justify-content-center align-items-center" style="height: 65vh;">
-    <div class="card p-4 text-center" style="width: 100%; max-width: 400px;">
+    <div class="card p-4 text-center shadow-sm" style="width: 100%; max-width: 400px;">
         <img class="mb-4 mx-auto" src="https://cdn-icons-png.flaticon.com/512/5087/5087579.png" style="width: 200px;">
         <h1 class="h3 mb-3 font-weight-normal">
             Por favor, faça o login
         </h1>
         <form method="POST" action="{% url 'login' %}">
-        </form>
 
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-        </table>
-        <br>
-        <input class="btn btn-success" type="submit" value="login">
-        <input type="hidden" name="next" value="{{ next }}">
-        </form>
 
-        {% endblock %}
+            {% csrf_token %}
+            <div class="form-group mb-3">
+                <label for="id_username" class="form-label">{{ form.username.label_tag }}</label>
+                {{ form.username }}
+            </div>
+            <div class="form-group mb-3">
+                <label for="id_password" class="form-label">{{ form.password.label_tag }}</label>
+                {{ form.password }}
+            </div>
+            <button class="btn btn-success w-100" type="submit">Login</button>
+            <input type="hidden" name="next" value="{{ next }}">
+        </form>
+    </div>
+</div>
+{% endblock %}
